syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ovh.cds.sdk.grpcplugin.integrationplugin";
option java_outer_classname = "IntegrationPluginProto";
option go_package = "integrationplugin";

package integrationplugin;

import "google/protobuf/empty.proto";

// To generate the go files run: 
// protoc --go_out=plugins=grpc:. *.proto

message IntegrationPluginManifest {
    string name = 1;
    string version = 2;
    string description = 3;
    string author = 4;
}

message DeployQuery {
    map<string, string> options = 1;
}

message DeployResult {
    string status = 1;
    string details = 2;
}

message DeployStatusQuery {
    string ID = 1;
}

service IntegrationPlugin {
    rpc Manifest (google.protobuf.Empty) returns (IntegrationPluginManifest) {}
    rpc Deploy (DeployQuery) returns (DeployResult) {}
    rpc DeployStatus (DeployStatusQuery) returns (DeployResult) {}
    rpc Stop (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}